bk_ida/gobmkida/c2/compute_surroundings
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_surroundings/src/engine/surround.c:1182:7: error: use of undeclared identifier 'byte_9B388C'
if ( !byte_9B388C[v124] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_surroundings/src/engine/surround.c:1187:26: error: use of undeclared identifier 'byte_9B388D'
v130 = ( unsigned __int8)byte_9B388D[v124]; 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_surroundings/src/engine/surround.c:1215:26: error: use of undeclared identifier 'byte_9B388D'
v136 = ( unsigned __int8)byte_9B388D[v124]; 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_surroundings/src/engine/surround.c:1224:7: error: use of undeclared identifier 'byte_9B389F'
if ( !byte_9B389F[v124] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_surroundings/src/engine/surround.c:1226:8: error: use of undeclared identifier 'byte_9B389E'
v126 = byte_9B389E[v124]; 
       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_surroundings/src/engine/surround.c:1322:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[k] != 3 && mx[k - 1] == 1 ) 
     ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_surroundings/src/obj/1/surround.o] Error 1
